# academic_project

./: .gitignore  README.md
GPT_OSS_TEST_BENCHMARK/: AGENT.md  requirements.txt
JAX_training/: .gitignore  README.md  pyproject.toml  requirements.txt
JAX_training/src/jax_practice/: __init__.py  cli.py
JAX_training/src/jax_practice/problems/: __init__.py  base.py  transpose.py
JAX_training/src/jax_transpose/: __init__.py  transpose.py
JAX_training/src/jax_transpose.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
JAX_training/tests/: test_transpose.py
NLP_stanford_lecture/assignment1/: assignement_objective.md
NLP_stanford_lecture/assignment1/cs336_basics/: QA.py  pretokenization_example.py  some_function.py  train_bpe.py  train_bpe_from_scratch.py  train_bpe_v0.py
NLP_stanford_lecture/assignment1/tests/: adapters.py
Quantitative_analysis_class/: print('hello world').r
